# mlx-101

./: .env.example  .gitignore  METAL_LIBRARY_FIX_GUIDE.md  METAL_LIBRARY_TESTING_GUIDE.md  README.md  SETUP_COMPLETE.md  SWIFT_FIX_REPORT.md  pyproject.toml  quick_test.py  requirements.txt  setup_metal_env.sh  swift_check.swift  test_agent.py  test_llm.py  working_examples.py
.cline/: mcp.json
.roo/: mcp.json
docs/: MCP_CONFIGURATION_SUMMARY.md  MCP_ENVIRONMENT_SETUP.md  azure-mcp-installation-summary.md
examples/: 01_basic_operations.py  02_linear_algebra.py  03_neural_networks.py  04_image_processing.py  05_langgraph_mlx_demo.py  05_langgraph_mlx_guide.py  06_smart_agent_demo.py  07_langgraph_integration.py  08_comprehensive_local_agent.py  09_working_local_agent.py  mlx_demo.py  swift_jupyter_demo.ipynb  test_metal_library.py
notebooks/: interactive_local_agent_demo.ipynb
scripts/: setup-mcp-env.sh  validate-mcp-env.sh
swift-examples/: Package.resolved  Package.swift  README.md
swift-examples/Sources/BasicOperations/: main.swift
swift-examples/Sources/LinearAlgebra/: main.swift
swift-examples/Sources/LocalMLXAgent/: main.swift
swift-examples/Sources/TestMetalLibrary/: main.swift
tests/: debug_generation.py  swift_check.swift  test_demo.py
