[project]
name = "mlx-tutorial"
version = "0.1.0"
description = "Learning MLX with Python and Swift"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mlx>=0.26.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "pillow>=8.0.0",
    "mlx-lm>=0.25.2",
    "sentence-transformers>=4.1.0",
    "langgraph>=0.4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]
ml = [
    "transformers>=4.20.0",
    "datasets>=2.0.0",
    "scikit-learn>=1.1.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
